run consumer in venv

--- a/python/src/Dockerfile
+++ b/python/src/Dockerfile
@@ -3,9 +3,10 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get clean && apt-get install -y python3-software-properties mailutils-
 
 WORKDIR /usr/src/app
-COPY requirements.txt producer.py prepare.sh install-librdkafka.sh ./
+COPY producer.py readings.avsc run.sh requirements.txt prepare.sh install-librdkafka.sh ./
 RUN ./install-librdkafka.sh
 RUN python3 -m venv env
 RUN /usr/src/app/prepare.sh
 
-CMD [ "python", "./producer.py" ]
+COPY run.sh ./
+CMD [ "bash", "./run.sh" ]
