Latest version of consumer.

--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>minimal-kafka-java</groupId>
-	<artifactId>minimal-kafka-java</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>kafka-minimal</groupId>
+	<artifactId>kafka-minimal</artifactId>
+	<version>0.0.1</version>
 
 	<repositories>
 		<repository>
@@ -66,7 +66,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>MinimalConsumerMain</mainClass>
+							<mainClass>MemoryUseReportingMain</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
