add consumer to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,7 @@ services:
     build: producer
     environment:
       KAFKA_BROKER_LIST: kafka:9093
+  consumer:
+    build: python/src
+    environment:
+      KAFKA_BROKER_LIST: kafka:9093
